--- a/package.json
+++ b/package.json
@@ -30,5 +30,19 @@
   },
   "browser": {
     "bootstrip-alert": "index.js"
+  },
+  "testling": {
+    "files": [
+      "test/main.js"
+    ],
+    "browsers": [
+      "safari/latest",
+      "ie/9..latest",
+      "chrome/20..latest",
+      "firefox/10..latest",
+      "opera/11.0..latest",
+      "iphone/6",
+      "ipad/6"
+    ]
   }
 }
